--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-sqlite-app-starter",
-  "version": "3.5.2-dev3",
+  "version": "3.6.2-dev3",
   "description": "Ionic/Angular SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -9,6 +9,7 @@
     "ng": "ng",
     "start": "npm run copysqlwasm && ng serve",
     "build": "npm run copysqlwasm && ng build",
+    "build-production": "npm run copysqlwasm && ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -22,6 +23,8 @@
     "@angular/platform-browser": "~13.2.4",
     "@angular/platform-browser-dynamic": "~13.2.4",
     "@angular/router": "~13.2.4",
+    "@awesome-cordova-plugins/splash-screen": "^5.44.0",
+    "@awesome-cordova-plugins/status-bar": "^5.44.0",
     "@capacitor-community/sqlite": "^3.5.2-dev2",
     "@capacitor/android": "^3.5.1",
     "@capacitor/app": "^1.1.0",
@@ -32,8 +35,10 @@
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/toast": "^1.0.8",
+    "@ionic-native/splash-screen": "^5.36.0",
     "@ionic/angular": "^6.0.9",
     "@ionic/pwa-elements": "^3.1.1",
+    "cordova-plugin-statusbar": "^3.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -51,6 +56,7 @@
     "@capacitor-community/electron": "^4.1.0",
     "@capacitor/cli": "^3.5.1",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@ionic/lab": "3.2.13",
     "@types/jasmine": "^3.6.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^12.11.1",
