--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^13.2.7",
     "@angular/common": "~13.2.4",
     "@angular/core": "~13.2.4",
     "@angular/forms": "~13.2.4",
@@ -37,10 +38,11 @@
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/toast": "^1.0.8",
     "@ionic-native/splash-screen": "^5.36.0",
-    "@ionic/angular": "^6.0.9",
+    "@ionic/angular": "^6.2.2",
     "@ionic/pwa-elements": "^3.1.1",
     "cordova-plugin-statusbar": "^3.0.0",
     "rxjs": "~6.6.0",
+    "swiper": "^8.3.2",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
