--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.2.7",
-    "@angular/common": "~13.2.4",
-    "@angular/core": "~13.2.4",
-    "@angular/forms": "~13.2.4",
-    "@angular/platform-browser": "~13.2.4",
-    "@angular/platform-browser-dynamic": "~13.2.4",
-    "@angular/router": "~13.2.4",
+    "@angular/animations": "^14.1.2",
+    "@angular/common": "^14.1.2",
+    "@angular/core": "^14.1.2",
+    "@angular/forms": "^14.1.2",
+    "@angular/platform-browser": "^14.1.2",
+    "@angular/platform-browser-dynamic": "^14.1.2",
+    "@angular/router": "^14.1.2",
     "@awesome-cordova-plugins/splash-screen": "^5.44.0",
     "@awesome-cordova-plugins/status-bar": "^5.44.0",
     "@capacitor-community/sqlite": "^3.7.0",
@@ -47,15 +47,15 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.9",
+    "@angular-devkit/build-angular": "^14.1.2",
     "@angular-eslint/builder": "~13.1.0",
     "@angular-eslint/eslint-plugin": "~13.1.0",
     "@angular-eslint/eslint-plugin-template": "~13.1.0",
     "@angular-eslint/template-parser": "~13.1.0",
-    "@angular/cli": "~13.2.5",
-    "@angular/compiler": "~13.2.4",
-    "@angular/compiler-cli": "~13.2.4",
-    "@angular/language-service": "~13.2.4",
+    "@angular/cli": "^14.1.2",
+    "@angular/compiler": "^14.1.2",
+    "@angular/compiler-cli": "^14.1.2",
+    "@angular/language-service": "^14.1.2",
     "@capacitor-community/electron": "^4.1.0",
     "@capacitor/cli": "^3.7.0",
     "@ionic/angular-toolkit": "^6.0.0",
@@ -80,7 +80,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.4.4"
+    "typescript": "~4.7.4"
   },
   "repository": {
     "type": "git",
