--- a/electron/package.json
+++ b/electron/package.json
@@ -21,14 +21,16 @@
   },
   "dependencies": {
     "@capacitor-community/electron": "^4.1.0",
-    "@capacitor-community/sqlite": "^3.7.0",
+    "@capacitor-community/sqlite": "^4.1.1",
     "chokidar": "~3.5.2",
     "electron-is-dev": "~2.0.0",
     "electron-serve": "~1.1.0",
     "electron-unhandled": "~3.0.2",
     "electron-updater": "~4.3.9",
     "electron-window-state": "~5.0.3",
-    "sqlite3": "^5.0.5"
+    "jszip": "^3.10.1",
+    "node-fetch": "^2.6.7",
+    "sqlite3": "^5.1.0"
   },
   "devDependencies": {
     "@types/sqlite3": "^3.1.8",
