--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -3,6 +3,7 @@
 	"appName": "angular-sqlite-app-starter",
 	"webDir": "www",
 	"bundledWebRuntime": false,
+	"loggingBehavior": "debug",
 	"plugins": {
 		"CapacitorSQLite": {
 			"iosDatabaseLocation": "Library/CapacitorDatabase",
@@ -14,7 +15,7 @@
 			},
 			"androidIsEncryption": true,
 			"androidBiometric": {
-				"biometricAuth": true,
+				"biometricAuth": false,
 				"biometricTitle": "Biometric login for capacitor sqlite",
 				"biometricSubTitle": "Log in using your biometric"
 			},
