--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-sqlite-app-starter",
-  "version": "3.7.1",
+  "version": "4.2.0",
   "description": "Ionic/Angular SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -17,47 +17,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.1.2",
-    "@angular/common": "^14.1.2",
-    "@angular/core": "^14.1.2",
-    "@angular/forms": "^14.1.2",
-    "@angular/platform-browser": "^14.1.2",
-    "@angular/platform-browser-dynamic": "^14.1.2",
-    "@angular/router": "^14.1.2",
+    "@angular/common": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/splash-screen": "^5.44.0",
     "@awesome-cordova-plugins/status-bar": "^5.44.0",
-    "@capacitor-community/sqlite": "^3.7.0",
-    "@capacitor/android": "^3.7.0",
-    "@capacitor/app": "^1.1.0",
-    "@capacitor/core": "^3.7.0",
-    "@capacitor/dialog": "^1.0.7",
-    "@capacitor/filesystem": "^1.1.0",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/ios": "^3.7.0",
-    "@capacitor/keyboard": "1.2.2",
-    "@capacitor/status-bar": "1.0.8",
-    "@capacitor/toast": "^1.0.8",
+    "@capacitor-community/sqlite": "^4.2.0",
+    "@capacitor/android": "^4.2.0",
+    "@capacitor/app": "^4.0.0",
+    "@capacitor/core": "^4.2.0",
+    "@capacitor/dialog": "^4.0.0",
+    "@capacitor/filesystem": "^4.0.0",
+    "@capacitor/haptics": "^4.0.0",
+    "@capacitor/ios": "^4.2.0",
+    "@capacitor/keyboard": "^4.0.0",
+    "@capacitor/status-bar": "^4.0.0",
+    "@capacitor/toast": "^4.0.0",
     "@ionic-native/splash-screen": "^5.36.0",
-    "@ionic/angular": "^6.2.2",
+    "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
     "cordova-plugin-statusbar": "^3.0.0",
+    "jeep-sqlite": "^1.6.2",
     "rxjs": "~6.6.0",
-    "swiper": "^8.3.2",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.1.2",
-    "@angular-eslint/builder": "~13.1.0",
-    "@angular-eslint/eslint-plugin": "~13.1.0",
-    "@angular-eslint/eslint-plugin-template": "~13.1.0",
-    "@angular-eslint/template-parser": "~13.1.0",
-    "@angular/cli": "^14.1.2",
-    "@angular/compiler": "^14.1.2",
-    "@angular/compiler-cli": "^14.1.2",
-    "@angular/language-service": "^14.1.2",
+    "@angular-devkit/build-angular": "^14.0.0",
+    "@angular-eslint/builder": "~13.0.1",
+    "@angular-eslint/eslint-plugin": "~13.0.1",
+    "@angular-eslint/eslint-plugin-template": "~13.0.1",
+    "@angular-eslint/template-parser": "~13.0.1",
+    "@angular/cli": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
+    "@angular/language-service": "^14.0.0",
     "@capacitor-community/electron": "^4.1.0",
-    "@capacitor/cli": "^3.7.0",
+    "@capacitor/cli": "^4.2.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@ionic/lab": "3.2.13",
     "@types/jasmine": "^3.6.0",
@@ -80,7 +79,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.7.4"
+    "typescript": "~4.7.3"
   },
   "repository": {
     "type": "git",
