--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^14.1.2",
     "@angular/common": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
@@ -42,6 +43,7 @@
     "cordova-plugin-statusbar": "^3.0.0",
     "jeep-sqlite": "^1.6.2",
     "rxjs": "~6.6.0",
+    "swiper": "^8.4.4",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
