--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
     "cordova-plugin-statusbar": "^3.0.0",
+    "ionic": "^5.4.16",
     "jeep-sqlite": "^1.6.2",
     "rxjs": "~6.6.0",
     "swiper": "^8.4.4",
-    "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -81,6 +81,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
+    "tslib": "^2.4.1",
     "typescript": "~4.7.3"
   },
   "repository": {
