--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "cordova-plugin-statusbar": "^3.0.0",
     "ionic": "^5.4.16",
     "jeep-sqlite": "^1.6.2",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.5.0",
     "swiper": "^8.4.4",
     "zone.js": "~0.11.4"
   },
