--- a/angular.json
+++ b/angular.json
@@ -69,8 +69,12 @@
               "progress": false
             },
             "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
               "sourceMap": true,
-              "optimization": false
+              "namedChunks": true
             }
           }
         },
