--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "com.jeep.app.ionic.angular",
-	"appName": "angular-sqlite-app-starter",
+	"appId": "com.app.progress.pall",
+	"appName": "progress-pall",
 	"webDir": "www",
 	"bundledWebRuntime": false,
 	"loggingBehavior": "debug",
@@ -8,7 +8,7 @@
 		"CapacitorSQLite": {
 			"iosDatabaseLocation": "Library/CapacitorDatabase",
 			"iosIsEncryption": true,
-			"iosKeychainPrefix": "angular-sqlite-app-starter",
+			"iosKeychainPrefix": "progress-pall",
 			"iosBiometric": {
 				"biometricAuth": false,
 				"biometricTitle": "Biometric login for capacitor sqlite"
