--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,8 @@
 {
-  "name": "angular-sqlite-app-starter",
+  "name": "progress-pall",
   "integrations": {
-    "capacitor": {}
+    "capacitor": {},
+    "cordova": {}
   },
   "type": "angular"
 }
