--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,11 +1,9 @@
 apply plugin: 'com.android.application'
 
 android {
-
-    namespace 'com.jeep.app.ionic.angular'
-    compileSdk 33
+    compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.jeep.app.ionic.angular"
+        applicationId "com.app.progress.pall"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
