--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.1.2",
-    "@angular/common": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
+    "@angular/animations": "^16.2.10",
+    "@angular/common": "^16.2.10",
+    "@angular/core": "^16.2.10",
+    "@angular/forms": "^16.2.10",
+    "@angular/platform-browser": "^16.2.10",
+    "@angular/platform-browser-dynamic": "^16.2.10",
+    "@angular/router": "^16.2.10",
     "@awesome-cordova-plugins/splash-screen": "^5.44.0",
     "@awesome-cordova-plugins/status-bar": "^5.44.0",
     "@capacitor-community/sqlite": "^4.2.0",
@@ -37,6 +37,7 @@
     "@capacitor/keyboard": "^4.0.0",
     "@capacitor/status-bar": "^4.0.0",
     "@capacitor/toast": "^4.0.0",
+    "@ionic-native/core": "^5.36.0",
     "@ionic-native/splash-screen": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
@@ -45,18 +46,18 @@
     "jeep-sqlite": "^1.6.2",
     "rxjs": "^7.5.0",
     "swiper": "^8.4.4",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.0",
+    "@angular-devkit/build-angular": "^16.2.7",
     "@angular-eslint/builder": "~13.0.1",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/compiler-cli": "^14.0.0",
-    "@angular/language-service": "^14.0.0",
+    "@angular/cli": "^16.2.7",
+    "@angular/compiler": "^16.2.10",
+    "@angular/compiler-cli": "^16.2.10",
+    "@angular/language-service": "^16.2.10",
     "@capacitor-community/electron": "^4.1.0",
     "@capacitor/cli": "^4.2.0",
     "@ionic/angular-toolkit": "^6.0.0",
@@ -82,7 +83,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslib": "^2.4.1",
-    "typescript": "~4.7.3"
+    "typescript": "~5.1.6"
   },
   "repository": {
     "type": "git",
